<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome_text">Welcome</string>
    <string name="all_your_dreams_will_come_true">All your dreams will come true</string>
    <string name="continue_text">Continue</string>
    <string name="click_continue_to_learn_how_to_use_the_app">Click continue to learn how to use the App</string>


    <string name="instruction_text">You can save your dream shoe information. \nNavigate to the \"Shoe List\" screen. \nClick add new shoe button. \nEnter the shoe information and click save.</string>
    <string name="how_to_use">How to use!</string>
    <string name="shoe_list">Shoe List</string>

    <string name="add_new_shoe">Add New Shoe</string>

    <string name="shoe_list_text">Shoe name: %1$s. \nShoe Size: %2$s. \nCompany: %3$s. \nDescription: %4$s</string>
    <string name="log_out">Log Out</string>
</resources>
